# opentongchi

./: .gitignore  PROMPT.md  README.md  hashitool.py  main.py  opentongchi.spec  prompt.md  pyproject.toml  requirements.txt  setup.py  tongchi.py  tongchi_claude.py  tongchi_gemini.py
app/: __init__.py  __main__.py  async_menu.py  dialogs.py  process_manager.py  settings.py  systray.py
app/clients/: __init__.py  base.py  boundary.py  consul.py  hcp.py  nomad.py  openbao.py  opentofu.py  packer.py
app/menus/: __init__.py  boundary.py  consul.py  hcp.py  nomad.py  openbao.py  opentofu.py  packer.py
opus/: main.py
opus/app/: __init__.py  background.py  config.py  consul.py  dialogs.py  http_client.py  nomad.py  openbao.py  opentofu.py  tray.py
